Removed erros and warnings